--- a/WebshopFrontend/Components/Pages/Checkout.razor
+++ b/WebshopFrontend/Components/Pages/Checkout.razor
@@ -5,8 +5,6 @@
 @inject ICounterService CounterService
 @inject IUserService UserService
 
-<h3>Checkout</h3>
-
 @if (_formSubmitted)
 {
     <AuthorizeView>
@@ -16,23 +14,24 @@
 
 else
 {
-    <div class="checkout-table-container">
-        <CheckoutProductTable OnEmptyCart="HideUserDetailsForm" />
-    </div>
+    
+        <Cart OnEmptyCart="HideUserDetailsForm" />
+    
     <AuthorizeView>
         <Authorized>
             @if (!_cartEmpty)
             {
-                <div>
-                    <UserDetailsForm OnFormSubmit="OnFormSubmitted"/>
+                <div class="white border padding-x padding-y">
+                    <UserDetailsForm OnFormSubmit="OnFormSubmitted" />
                 </div>
             }
         </Authorized>
         <NotAuthorized>
-            <div>
-                <p>Please log in to continue</p>
-                <LoginBox />
+            <div class="white border padding-x padding-y">
+                <strong>Please log in to continue</strong>
             </div>
+            <LoginBox />
+
         </NotAuthorized>
     </AuthorizeView>
 }
