--- a/WebshopFrontend/wwwroot/css/general.css
+++ b/WebshopFrontend/wwwroot/css/general.css
@@ -1,4 +1,8 @@
-﻿.white {
+﻿.border {
+    border: 1px solid #d9d9d9;
+}
+
+.white {
     background-color: white;
     color: black;
 }
@@ -7,6 +11,22 @@
     background-color: black;
     color: white;
 }
+
+.button-fit {
+    width: fit-content;
+    display: block;
+    cursor: pointer;
+    text-decoration: none;
+    border-radius: 5px;
+    border: 0;
+    background-color: rgb(76, 180, 76);
+    color: white
+}
+
+.button-fit:hover {
+        background-color: rgb(56, 160, 56);
+    }
+
 .container-center-verticaly {
     position: relative
 }
@@ -39,6 +59,11 @@
 .margin-x {
     margin-left: 8px;
     margin-right: 8px;
+}
+
+.margin-y {
+    margin-top: 8px;
+    margin-bottom: 8px;
 }
 
 .padding-y-64 {
