--- a/WebshopFrontend/Razor/Pages/Checkout/OrderConfirmationDetails.razor
+++ b/WebshopFrontend/Razor/Pages/Checkout/OrderConfirmationDetails.razor
@@ -11,7 +11,7 @@ else
         <TableHeader>
             <th>Product</th>
             <th>ArNr</th>
-            <th>DiscountPrice</th>
+            <th>Price</th>
             <th>Quantity</th>
         </TableHeader>
         <RowTemplate>
