--- a/WebshopFrontend/Razor/_Imports.razor
+++ b/WebshopFrontend/Razor/_Imports.razor
@@ -7,9 +7,9 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using WebshopFrontend
-@using WebshopFrontend.Components
+@using WebshopFrontend.Razor.Components
+@using WebshopFrontend.Razor
 @using WebshopShared
 @using Microsoft.AspNetCore.Components.Authorization
 @using WebshopFrontend.Services.Interfaces
-@using WebshopFrontend.Components.Components
 @using System.Security.Claims
