--- a/WebshopFrontend/Razor/Pages/Products/ProductPreview.razor
+++ b/WebshopFrontend/Razor/Pages/Products/ProductPreview.razor
@@ -1,4 +1,4 @@
-﻿<div class="product-flex-item white padding-y-16 padding-x-16">
+﻿<div class="product-flex-item white padding-y-16 padding-x-16 border">
     <NavLink href="@ProductHref" class="white">
         <div>
             <img src="@Product.Image.ImageSmallUrl" alt="@Product.Image.ImageText"/>
