--- a/WebshopFrontend/Razor/Pages/Products/Products.razor
+++ b/WebshopFrontend/Razor/Pages/Products/Products.razor
@@ -1,6 +1,9 @@
 ﻿@page "/products"
 @inject IProductService ProductService
 
+<PageTitle>Products</PageTitle>
+<PageHeading>Products</PageHeading>
+
 <div class="product-flex-container">
 
     @if (_products == null)
