--- a/WebshopFrontend/wwwroot/css/general.css
+++ b/WebshopFrontend/wwwroot/css/general.css
@@ -1,5 +1,7 @@
-﻿.border {
-    border: 1px solid #d9d9d9;
+﻿
+.border {
+    /*border: 1px solid #d9d9d9;*/
+    border: 1px solid #ededed;
 }
 
 .white {
