--- a/WebshopFrontend/Razor/Components/LoginBox.razor
+++ b/WebshopFrontend/Razor/Components/LoginBox.razor
@@ -3,24 +3,45 @@
 <div class="login-box padding-y padding-x-16 border">
     <AuthorizeView>
         <Authorized>
-            <p>You're logged in as @context.User.Identity?.Name.</p>
+            <button @onclick="Logout"
+                    type="button"
+                    class="button-fit padding-x padding-y text-large">
+                Log out
+            </button>
         </Authorized>
         <NotAuthorized>
 
-            <div class="padding-y">
-                <label for="email">
-                    Email:
-                    <InputText id="email" class="input-text" @bind-value="@_loginDto.Email"></InputText>
-                </label>
-            </div>
+            <EditForm Model="LoginDto" OnValidSubmit="LogIn" FormName="Login" Context="loginFormContext">
+                <DataAnnotationsValidator />
 
-            <div class="padding-y">
-                <label for="password">
-                    Password:
-                    <InputText id="password" type="password" class="input-text" @bind-value="@_loginDto.Password"></InputText>
-                </label>
-            </div>
-            <button type="button" class="button-fit padding-x padding-y text-large" @onclick="LogIn">Log In</button>
+                <div class="padding-y">
+                    <label for="email">
+                        Email:
+                        <InputText @bind-value="@LoginDto.Email"
+                                   id="email"
+                                   class="input-text"
+                                   placeholder="name@example.com"></InputText>
+                    </label>
+                    <ValidationMessage For="() => LoginDto.Email" class="red" />
+                </div>
+
+                <div class="padding-y">
+                    <label for="password">
+                        Password:
+                        <InputText @bind-value="@LoginDto.Password"
+                                   id="password"
+                                   type="password"
+                                   class="input-text"
+                                   placeholder="password"></InputText>
+                    </label>
+                    <ValidationMessage For="() => LoginDto.Password"
+                                       class="red" />
+                </div>
+
+                <button type="submit" class="button-fit padding-x padding-y text-large">
+                    Log In
+                </button>
+            </EditForm>
 
             @foreach (var error in _registerLoginResponseDto.ErrorList)
             {
@@ -31,14 +52,15 @@
 </div>
 
 @code {
-    private LoginDto _loginDto = new();
+    [SupplyParameterFromForm] private LoginDto LoginDto { get; set; } = new();
+
     private RegisterLoginResponseDto _registerLoginResponseDto = new();
 
     [Parameter] public EventCallback OnLogin { get; set; }
 
     private async Task LogIn()
     {
-        _registerLoginResponseDto = await UserService.LoginAsync(_loginDto);
+        _registerLoginResponseDto = await UserService.LoginAsync(LoginDto);
 
         if (_registerLoginResponseDto.Succeeded)
         {
@@ -46,4 +68,8 @@
         }
     }
 
+    private async Task Logout()
+    {
+        await UserService.LogoutAsync();
+    }
 }
