--- a/WebshopFrontend/Razor/Pages/Home.razor
+++ b/WebshopFrontend/Razor/Pages/Home.razor
@@ -1,4 +1,13 @@
 ﻿@page "/"
+@inject NavigationManager NavigationManager
 
-<PageTitle></PageTitle>
+<PageTitle>Home</PageTitle>
+
+@code
+{
+    protected override void OnInitialized()
+    {
+        NavigationManager.NavigateTo("/products");
+    }
+}
 
