--- a/WebshopFrontend/Razor/Pages/Product/Product.razor
+++ b/WebshopFrontend/Razor/Pages/Product/Product.razor
@@ -7,6 +7,8 @@
 }
 else
 {
+    <PageTitle>@_boardgame.Product.Name</PageTitle>
+
     <div class="product-grid-container">
         <ProductHeading Product="_boardgame.Product"></ProductHeading>
         <ProductImages Product="_boardgame.Product"></ProductImages>
