Fixed warnings and restructured

--- a/WebshopFrontend/Razor/Components/AddToCartButton.razor
+++ b/WebshopFrontend/Razor/Components/AddToCartButton.razor
@@ -1,4 +1,5 @@
-﻿@inject IJSRuntime Js
+﻿@using WebshopFrontend.Contracts
+@inject IJSRuntime Js
 @inject ICounterService CartCounterService
 @inject ICartService CartService
 @inject IUserService UserService
