--- a/WebshopFrontend/Razor/Components/LoginBox.razor
+++ b/WebshopFrontend/Razor/Components/LoginBox.razor
@@ -1,4 +1,5 @@
-﻿@inject IUserService UserService
+﻿@using WebshopFrontend.Contracts
+@inject IUserService UserService
 
 <div class="login-box padding-y padding-x-16 border">
     <AuthorizeView>
