--- a/WebshopFrontend/Razor/Pages/Checkout/Cart.razor
+++ b/WebshopFrontend/Razor/Pages/Checkout/Cart.razor
@@ -1,4 +1,5 @@
-﻿@inject ICounterService CounterService
+﻿@using WebshopFrontend.Contracts
+@inject ICounterService CounterService
 @inject ICartService CartService
 
 @if (CartItems.Count == 0)
