--- a/WebshopFrontend/Razor/Pages/Checkout/Checkout.razor
+++ b/WebshopFrontend/Razor/Pages/Checkout/Checkout.razor
@@ -1,4 +1,5 @@
 ﻿@page "/checkout"
+@using WebshopFrontend.Contracts
 @using WebshopShared.Validation
 @inject ICartService CartService
 @inject IOrderService OrderService
