--- a/WebshopFrontend/Razor/Pages/Checkout/OrderConfirmationDetails.razor
+++ b/WebshopFrontend/Razor/Pages/Checkout/OrderConfirmationDetails.razor
@@ -1,4 +1,5 @@
-﻿@inject IOrderService OrderService
+﻿@using WebshopFrontend.Contracts
+@inject IOrderService OrderService
 @inject IUserService UserService
 
 @if (Order == null)
