--- a/WebshopFrontend/Razor/_Imports.razor
+++ b/WebshopFrontend/Razor/_Imports.razor
@@ -11,5 +11,5 @@
 @using WebshopFrontend.Razor
 @using WebshopShared
 @using Microsoft.AspNetCore.Components.Authorization
-@using WebshopFrontend.Services.Interfaces
+@using WebshopFrontend.Services
 @using System.Security.Claims
