--- a/WebshopFrontend/Razor/Components/CartIcon.razor
+++ b/WebshopFrontend/Razor/Components/CartIcon.razor
@@ -1,4 +1,5 @@
-﻿@inject ICounterService CounterService
+﻿@using WebshopFrontend.Contracts
+@inject ICounterService CounterService
 @inject ICartService CartService
 
 <NavLink href="checkout" class="text-gray">
