--- a/WebshopFrontend/Razor/Components/UserDetailsForm.razor
+++ b/WebshopFrontend/Razor/Components/UserDetailsForm.razor
@@ -1,4 +1,5 @@
-﻿@using WebshopShared.Validation
+﻿@using WebshopFrontend.Contracts
+@using WebshopShared.Validation
 @inject IUserService UserService
 
 <EditForm Model="UserDetails" OnValidSubmit="Submit" FormName="UserDetails">
